--- a/src/Eccube/Resource/template/default/Block/top.twig
+++ b/src/Eccube/Resource/template/default/Block/top.twig
@@ -51,7 +51,7 @@
                     <li class="list-group-item"><a href="{{ url('receiver_home') }}">ホーム</a></li>
                     <li class="list-group-item"><a href="#">取引中の商品</a></li>
                     <li class="list-group-item"><a href="{{ url('farm_notice') }}"><span>お知らせ</span><span class="li-active">&#x25CF;</span></a></li>
-                    <li class="list-group-item" id="setting"><a href="#">設定</a></li>
+                    <li class="list-group-item" id="setting"><a href="{{ url('farm_service_profile_setting') }}">設定</a></li>
                 {% endif %}
                 <li class="list-group-item"><a href="{{ url('contact') }}">お問い合わせ</a></li>
                 <li class="list-group-item"><a href="{{ url('help_guide') }}">ガイド</a></li>
