--- a/src/Eccube/Resource/template/default/Block/top_setting.twig
+++ b/src/Eccube/Resource/template/default/Block/top_setting.twig
@@ -5,48 +5,106 @@
  # Time: 7:45 PM
  #}
 
-<div class="farmer-new-header">
-    <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
-    <a href="{{ url('farm_home') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home"></a>
-    <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg"></a>
-</div>
+{% if is_granted("ROLE_FARMER") %}
 
-<div id="reicever-menu-wrapper" class="menu-wrapper hidden">
-    <div class="Rectangle">
-        <ul class="list-group" id="main-menu">
-            {% if is_granted("IS_AUTHENTICATED_FULLY") %}
-                <li class="list-group-item li-profile">
-                    <img id="upload-image" src="{{ app.config.image_save_urlpath }}/{{ app.user.profile_image|no_image_product }}" alt="profile" class="img-circle small-profile">
-                    <span class="profile-name">{{ app.user.__toString }}</span>
-                    <span class="button-x">X</span>
-                </li>
-                <li class="list-group-item">
-                    <a href="{{ url('farm_service_profile_setting') }}">
-                        登録者名・住所・電話番号
-                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
-                    </a>
-
-                </li>
-                <li class="list-group-item">
-                    <a href="{{ url('farm_farmer_password_change') }}">
-                        メールアドレス・パスワード
-                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
-                    </a>
-                </li>
-                <li class="list-group-item">
-                    <a href="#">
-                        指定購入者への割引設定
-                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
-                    </a>
-
-                </li>
-                <li class="list-group-item">
-                    <a href="#">
-                        やさいバスについて
-                        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png" class="float-right margin-top5">
-                    </a>
-                </li>
-            {% endif %}
-        </ul>
+    <div class="farmer-new-header">
+        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
+        <a href="{{ url('farm_home') }}">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-home.svg" class="nav-home">
+        </a>
+        <a href="{{ url('top') }}">
+            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg">
+        </a>
     </div>
-</div>
+
+    <div id="reicever-menu-wrapper" class="menu-wrapper hidden">
+        <div class="Rectangle">
+            <ul class="list-group" id="main-menu">
+                {% if is_granted("IS_AUTHENTICATED_FULLY") %}
+                    <li class="list-group-item li-profile">
+                        <img id="upload-image"
+                             src="{{ app.config.image_save_urlpath }}/{{ app.user.profile_image|no_image_product }}"
+                             alt="profile" class="img-circle small-profile">
+                        <span class="profile-name">{{ app.user.__toString }}</span>
+                        <span class="button-x">X</span>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="{{ url('farm_service_profile_setting') }}">
+                            登録者名・住所・電話番号
+                            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png"
+                                 class="float-right margin-top5">
+                        </a>
+
+                    </li>
+                    <li class="list-group-item">
+                        <a href="{{ url('farm_farmer_password_change') }}">
+                            メールアドレス・パスワード
+                            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png"
+                                 class="float-right margin-top5">
+                        </a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#">
+                            指定購入者への割引設定
+                            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png"
+                                 class="float-right margin-top5">
+                        </a>
+
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#">
+                            やさいバスについて
+                            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png"
+                                 class="float-right margin-top5">
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+{% else %}
+    <div class="farmer-new-header">
+        <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-menu.svg" class="hambuger-menu-reicever">
+        <a href="{{ url('top') }}"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/logo.svg" class="logo-svg"></a>
+        <a href="{{ url('receiver_search') }}" class="float-right"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-search.svg" class="nav-search"></a>
+        <a href="{{ url('cart') }}" class="float-right"><img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/nav-cart.svg" class="nav-cart"></a>
+    </div>
+
+    <div id="reicever-menu-wrapper" class="menu-wrapper hidden">
+        <div class="Rectangle">
+            <ul class="list-group" id="main-menu">
+                {% if is_granted("IS_AUTHENTICATED_FULLY") %}
+                    <li class="list-group-item li-profile">
+                        <img id="upload-image"
+                             src="{{ app.config.image_save_urlpath }}/{{ app.user.profile_image|no_image_product }}"
+                             alt="profile" class="img-circle small-profile">
+                        <span class="profile-name">{{ app.user.__toString }}</span>
+                        <span class="button-x">X</span>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="{{ url('farm_service_profile_setting') }}">
+                            登録者名・住所・電話番号
+                            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png"
+                                 class="float-right margin-top5">
+                        </a>
+
+                    </li>
+                    <li class="list-group-item">
+                        <a href="{{ url('farm_farmer_password_change') }}">
+                            メールアドレス・パスワード
+                            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png"
+                                 class="float-right margin-top5">
+                        </a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="#">
+                            やさいバスについて
+                            <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/arrow.png"
+                                 class="float-right margin-top5">
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+{% endif %}
