--- a/src/Eccube/Resource/template/default/Farm/service_profile_setting.twig
+++ b/src/Eccube/Resource/template/default/Farm/service_profile_setting.twig
@@ -9,6 +9,54 @@
 {% set body_class = ' ' %}
 {% block javascript %}
     <script src="//yubinbango.github.io/yubinbango/yubinbango.js" charset="UTF-8"></script>
+    <script>
+        $(function () {
+            var index = 0;
+            $("#farmer_regist_receiver_get_time .radio label").each(function () {
+                var tag_name = $(this).text();
+                var id = $(this).find('input').attr('id');
+                var checked = $(this).find('input').attr('checked');
+                if (checked) {
+                    $("#get_time_group").append('<button class="btn btn-success" input_id="'+id+'" type="button">'+tag_name+'</button>');
+                } else {
+                    $("#get_time_group").append('<button class="btn btn-default" input_id="'+id+'" type="button">'+tag_name+'</button>');
+                }
+                index++;
+            });
+
+            $("#farmer_regist_receiver_container_type .radio label").each(function () {
+                var tag_name = $(this).text();
+                var id = $(this).find('input').attr('id');
+                var checked = $(this).find('input').attr('checked');
+                if (checked) {
+                    $("#container_type_group").append('<button class="btn btn-success" input_id="'+id+'" type="button">'+tag_name+'</button>');
+                } else {
+                    $("#container_type_group").append('<button class="btn btn-default" input_id="'+id+'" type="button">'+tag_name+'</button>');
+                }
+                index++;
+            });
+
+            $("#get_time_group button").click(function () {
+                var ele = $(this);
+                var id = ele.attr('input_id');
+                ele.addClass('btn-success');
+                ele.removeClass('btn-default');
+                ele.siblings().addClass('btn-default');
+                ele.siblings().removeClass('btn-success');
+                $("#"+id).prop('checked', true);
+            });
+
+            $("#container_type_group button").click(function () {
+                var ele = $(this);
+                var id = ele.attr('input_id');
+                ele.addClass('btn-success');
+                ele.removeClass('btn-default');
+                ele.siblings().addClass('btn-default');
+                ele.siblings().removeClass('btn-success');
+                $("#"+id).prop('checked', true);
+            });
+        });
+    </script>
 {% endblock %}
 {% block main %}
     <style type="text/css">
@@ -90,6 +138,35 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-12 col-sm-12 col-xs-12 inline-block" >
+                    <div class="form-group">
+                        {{ form_label(form.bus_stop) }}
+                        {{ form_errors(form.bus_stop) }}
+                        {{ form_widget(form.bus_stop, {'attr': {'class' :"select"}}) }}
+                    </div>
+                </div>
+
+                {% if is_granted("ROLE_RECIPIENT") %}
+                    <div class="col-lg-12 col-sm-12 col-xs-12 inline-block" >
+                        <div class="form-group">
+                            {{ form_label(form.receiver_get_time) }}
+                            {{ form_errors(form.receiver_get_time) }}
+                            {{ form_widget(form.receiver_get_time, {'attr': {'class': 'hidden'}}) }}
+                        </div>
+                        <div class="btn-group form-group btn-group-lg" role="group" id="get_time_group">
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-sm-12 col-xs-12 inline-block" >
+                        <div class="form-group">
+                            {{ form_label(form.receiver_container_type) }}
+                            {{ form_errors(form.receiver_container_type) }}
+                            {{ form_widget(form.receiver_container_type, {'attr': {'class': 'hidden'}}) }}
+                        </div>
+                        <div class="btn-group form-group btn-group-lg" role="group" id="container_type_group">
+                        </div>
+                    </div>
+                {% endif %}
 
                 <div class="col-sm-12 col-xs-12">
                     <button type="submit" class="btn btn-default display-block setting-btn">変更を申請する</button>
