--- a/src/Eccube/Resource/template/default/Receiver/receiver_transaction.twig
+++ b/src/Eccube/Resource/template/default/Receiver/receiver_transaction.twig
@@ -10,6 +10,7 @@
     <style type="text/css">
         .transaction-section {
             display: block;
+            min-height: 600px !important;
         }
 
     </style>
@@ -67,7 +68,7 @@
     </script>
 {% endblock javascript %}
 {% block main %}
-    <div id="reicever-wrapper" class="wrapper container">
+    <div id="reicever-wrapper" class="wrapper">
         <div class="exhibition">
             <div class="row">
                 <div class="col-sm-12 col-xs-12">
