--- a/src/Eccube/Resource/template/default/Block/top.twig
+++ b/src/Eccube/Resource/template/default/Block/top.twig
@@ -49,7 +49,7 @@
                         <span class="button-x">X</span>
                     </li>
                     <li class="list-group-item"><a href="{{ url('receiver_home') }}">ホーム</a></li>
-                    <li class="list-group-item"><a href="#">取引中の商品</a></li>
+                    <li class="list-group-item"><a href="{{ url('receiver_transaction') }}">取引中の商品</a></li>
                     <li class="list-group-item"><a href="{{ url('farm_notice') }}"><span>お知らせ</span><span class="li-active">&#x25CF;</span></a></li>
                     <li class="list-group-item" id="setting"><a href="{{ url('farm_service_profile_setting') }}">設定</a></li>
                 {% endif %}
