--- a/src/Eccube/Resource/template/default/Order/complete.twig
+++ b/src/Eccube/Resource/template/default/Order/complete.twig
@@ -84,9 +84,15 @@
         <div class="cart-content" id="cart-main-content3">
             <p class="title14 margin-left10 margin-top10 order-title">注文情報</p>
             <div class="receiver-status-profile clearfix">
-                <p>お届け先</p>
-                <img src="{{ app.config.image_save_urlpath }}/{{ Order.Customer.profile_image|no_image_product }}" class="profile50 img-circle">
-                <span class="profile-name-medium padding-top15">{{ Order.name01 }}{{ Order.name02 }}</span>
+                {% if is_granted(constant('Eccube\\Entity\\Master\\CustomerRole::RECIPIENT')) %}
+                    <p>生産者</p>
+                    <img src="{{ app.config.image_save_urlpath }}/{{ farmer.profile_image|no_image_product }}" class="profile50 img-circle">
+                    <span class="profile-name-medium padding-top15">{{ farmer.name01 }}{{ farmer.name02 }}</span>
+                {% else %}
+                    <p>お届け先</p>
+                    <img src="{{ app.config.image_save_urlpath }}/{{ Order.Customer.profile_image|no_image_product }}" class="profile50 img-circle">
+                    <span class="profile-name-medium padding-top15">{{ Order.name01 }}{{ Order.name02 }}</span>
+                {% endif %}
             </div>
 
             {% if Order.receiptable_date %}
@@ -98,6 +104,7 @@
 
             <p class="title12 margin-left10 margin-top15">折りたたみコンテナの数</p>
             <div class="margin-left10 clearfix cart-container margin-right10 margin-bottom15 padding-bottom15">
+                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/container-large.svg">
                 <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/container-large.svg">
             </div>
 
@@ -132,7 +139,7 @@
                 <div class="float-right margin-right10">
                     <p class="title14 text-align-right">{{ Order.subtotal|price }}</p>
                     {#Todo: implement container#}
-                    <p class="title14 text-align-right">350円</p>
+                    <p class="title14 text-align-right">0円</p>
                     <p class="title18 text-align-right">{{ Order.payment_total|price }}</p>
                 </div>
             {% endif %}
