--- a/src/Eccube/Resource/template/default/Order/delivery.twig
+++ b/src/Eccube/Resource/template/default/Order/delivery.twig
@@ -63,9 +63,15 @@
         <div class="cart-content" id="cart-main-content3">
             <p class="title14 margin-left10 margin-top10 order-title">注文情報</p>
             <div class="receiver-status-profile clearfix">
-                <p>お届け先</p>
-                <img src="{{ app.config.image_save_urlpath }}/{{ Order.Customer.profile_image|no_image_product }}" class="profile50 img-circle">
-                <span class="profile-name-medium padding-top15">{{ Order.name01 }}{{ Order.name02 }}</span>
+                {% if is_granted(constant('Eccube\\Entity\\Master\\CustomerRole::RECIPIENT')) %}
+                    <p>生産者</p>
+                    <img src="{{ app.config.image_save_urlpath }}/{{ farmer.profile_image|no_image_product }}" class="profile50 img-circle">
+                    <span class="profile-name-medium padding-top15">{{ farmer.name01 }}{{ farmer.name02 }}</span>
+                {% else %}
+                    <p>お届け先</p>
+                    <img src="{{ app.config.image_save_urlpath }}/{{ Order.Customer.profile_image|no_image_product }}" class="profile50 img-circle">
+                    <span class="profile-name-medium padding-top15">{{ Order.name01 }}{{ Order.name02 }}</span>
+                {% endif %}
             </div>
 
             {% if Order.receiptable_date %}
@@ -77,6 +83,7 @@
 
             <p class="title12 margin-left10 margin-top15">折りたたみコンテナの数</p>
             <div class="margin-left10 clearfix cart-container margin-right10 margin-bottom15 padding-bottom15">
+                <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/container-large.svg">
                 <img src="{{ app.config.front_urlpath }}/yasai-bus/img/icon/container-large.svg">
             </div>
 
