--- a/app/template/default/Block/product_list.twig
+++ b/app/template/default/Block/product_list.twig
@@ -142,11 +142,36 @@
     </script>
 {% endblock %}
 <style type="text/css">
-    .thumbnail {
-        border: 1px solid #ddd !important;
+    /******************************
+           Media Query for tablet, PC...
+       *******************************/
+    @media only screen and (min-width: 768px) {
+        .thumbnail {
+            border: 1px solid #ddd !important;
+            height: 420px;
+            margin: 10px 0 !important;
+        }
+        .thumbnail .main-img {
+            width: 345px;
+            height: 290px;
+        }
+    }
+    /******************************
+        Media Query for smart phone
+    *******************************/
+    @media only screen and (max-width: 767px) {
+        .thumbnail {
+            border: 1px solid #ddd !important;
+            height: 350px;
+            margin: 10px 0 !important;
+        }
+        .thumbnail .main-img {
+            width: 345px;
+            height: 200px;
+        }
     }
 </style>
-<div class="container" id="product-list">
+<div class="wrapper" id="product-list">
     <div class="row">
         <div class="col-xs-12 col-sm-12">
             <p class="product-list-title">
@@ -163,7 +188,7 @@
                     {% set TargetCustomer = Product.Creator %}
                     <div class="col-sm-3 col-xs-6 thumbnail">
                         <a href="{{ url('farm_item_detail', {'id': Product.id}) }}">
-                            <img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}">
+                            <img src="{{ app.config.image_save_urlpath }}/{{ Product.main_list_image|no_image_product }}" class="main-img">
                             <div class="caption">
                                 <h5 class="font-weight mg10">{{ Product.name }}</h5>
                                 <div class="row mg20">
