add sale and discount

--- a/src/Eccube/Resource/template/default/Block/top.twig
+++ b/src/Eccube/Resource/template/default/Block/top.twig
@@ -28,6 +28,7 @@
                 {% endif %}
                 <li class="list-group-item"><a href="{{ url('contact') }}">お問い合わせ</a></li>
                 <li class="list-group-item"><a href="{{ url('help_guide') }}">ガイド</a></li>
+                <li class="list-group-item"><a href="{{ url('logout') }}">ログアウト</a></li>
             </ul>
         </div>
     </div>
@@ -55,9 +56,8 @@
                 {% endif %}
                 <li class="list-group-item"><a href="{{ url('contact') }}">お問い合わせ</a></li>
                 <li class="list-group-item"><a href="{{ url('help_guide') }}">ガイド</a></li>
+                <li class="list-group-item"><a href="{{ url('logout') }}">ログアウト</a></li>
             </ul>
         </div>
     </div>
 {% endif %}
-
-
