--- a/src/Eccube/Resource/template/default/Block/top_setting.twig
+++ b/src/Eccube/Resource/template/default/Block/top_setting.twig
@@ -58,6 +58,7 @@
                                  class="float-right margin-top5">
                         </a>
                     </li>
+                    <li class="list-group-item"><a href="{{ url('logout') }}">ログアウト</a></li>
                 {% endif %}
             </ul>
         </div>
@@ -103,6 +104,7 @@
                                  class="float-right margin-top5">
                         </a>
                     </li>
+                    <li class="list-group-item"><a href="{{ url('logout') }}">ログアウト</a></li>
                 {% endif %}
             </ul>
         </div>
